sandbox/output
ProfitBefore.java:7: error: non-static variable this cannot be referenced from a static context
        Logger.getLogger(this.getClass().getName());
                         ^
1 error
